# app_monitorias_2026-1

./: .dockerignore  .env.example  .gga  .gitattributes  .gitignore  AGENTS.md  Dockerfile  GUIA_ARCHIVOS_PYTHON.md  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.dvc/: .gitignore  config
.dvc/tmp/: lock
.github/: copilot-instructions.md  pull_request_template.md
.streamlit/: config.toml
Trabajo Angels/: EDA en python.py
app/: GEMINI.md  main.py  navigation.py
app/components/: CLAUDE.md  style.py
app/config/: AGENTS.md  app.yaml  settings.py
app/domain/: CLAUDE.md  __init__.py  models.py
app/pages/: AGENTS.md  GEMINI.md  analytics.py  data_collection.py  eda_dashboard.py  exercise_1.py  home.py  sequential_flow.py
app/services/: AGENTS.md  app_container.py  comment_events.py  configuration.py  dashboard_sections.py  data_loader.py  embedding_providers.py  modeling.py  pdf_report.py  profile_constraints.py  remote_sync.py  sequential_flow_state.py  session_service.py  sqlite_connection.py  sqlite_schema.py  storage.py  storage_sqlite.py  submission_validation.py  synthetic_imputation.py  text_pipeline.py
app_scripts_utils/: AGENTS.md  GEMINI.md  analisis_vecindad_local.py  asignar_nuevos_puntos_conservador.py  clustering_bertopic.py  clustering_sapbert.py  comparar_modelos_embeddings.py  comparar_sapbert_vs_miniLM.py  crear_base_vectorial.py  extraer_dispositivos.py  generar_embeddings.py  generar_informe_clusters.py  generar_tabla_conteos.py  generar_visualizacion_html.py  google_sync_webapp.gs  normalizar_texto.py  sheet_admin_actions.py  sheet_snapshot_export.py  synthetic_sheet_imputation.py  synthetic_sheet_imputation_dataset.json  visualizar_3d.py  webapp_client.py
data/german_credit/: AGENTS.md
data/processed/: app.db  app_state.json
data/raw/: .gitignore  Default_Clientes.csv  Default_Clientes.csv.dvc  default_clientes.dvc  german_credit.dvc
notebooks/: CLAUDE.md  Diccionario_Datos_Credit_Card.csv  eda.ipynb  modelo_clientes.py  modelo_credito.py  modelo_kata.ipynb  modelo_mora.py  modelo_mora_seleecionado.py
skills/: AGENTS.md  CLAUDE.md
skills/administrar-sheet-remoto/: SKILL.md
skills/cascade-delete-participante/: SKILL.md
tests/: AGENTS.md  app_container_runtime_test.py  configuration_runtime_test.py  conftest.py  docker_runtime_contract_test.py  remote_sync_runtime_test.py  session_service_sqlite_test.py  sqlite_connection_test.py  sqlite_schema_test.py  storage_sqlite_contract_test.py  test_comment_events.py  test_modeling.py  test_pdf_report.py  test_profile_constraints.py  test_remote_sync.py  test_sequential_flow_state.py  test_session_service.py  test_sheet_admin_actions.py  test_sheet_snapshot_export.py  test_storage.py  test_submission_validation.py  test_synthetic_imputation.py  test_text_pipeline.py
(+5 files in other folders)
