[project]
name = "eda-ml-model"
version = "0.1.0"
description = "Realización del EDA para después implementar el modelo predictivo"
authors = [
    {name = "RamiroSeb",email = "juanrayala12@gmail.com"}
]

requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "dvc[gdrive] (>=3.67.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
