[project]
name = "monitorias"
version = "0.1.0"
description = ""
authors = [
    {name = "RamiroSeb", email = "juanrayala12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "pandas (>=2.2,<3.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "numpy (>=2.2,<2.4)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "umap-learn (>=0.5.9,<0.6.0)",
    "lime (>=0.2.0.1,<0.3.0.0)",
    "shap (>=0.52.0,<0.53.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "sentence-transformers (>=3.0.0,<4.0.0)",
    "fasttext-wheel (>=0.9.2,<1.0.0)",
    "dvc (>=3.67.0,<4.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)",
    "imblearn (>=0.0,<0.1)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "optuna (>=4.8.0,<5.0.0)",
    "numba (>=0.62.0,<0.63.0)",
    "reportlab (>=5.0.0,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.3.1,<27.0.0)"
]
